--- a/css/carousel.css
+++ b/css/carousel.css
@@ -39,7 +39,7 @@ body {
 
 /* Carousel base class */
 .carousel {
-  height: 800px;
+  height: 700px;
   margin-bottom: 60px;
 }
 /* Since positioning the image, we need to help out the caption */
@@ -49,15 +49,15 @@ body {
 
 /* Declare heights because of positioning of img element */
 .carousel .item {
-  height: 800px;
+  height: 700px;
   background-color: #777;
 }
 .carousel-inner > .item > img {
-  position: absolute;
+  position: relative;
   top: 0;
   left: 0;
   min-width: 100%;
-  height: 800px;
+  height: 700px;
 }
 
 
