--- a/css/carousel.css
+++ b/css/carousel.css
@@ -7,6 +7,18 @@ body {
   color: #5a5a5a;
 }
 
+#myCarousel img {
+    width:100%;
+    height:100%;
+    object-fit: cover;
+    overflow: hidden;
+}
+
+#myCarousel .btn-primary {
+  color: #fff;
+  background-color: #595959;
+  border-color: #333333;
+}
 
 /* CUSTOMIZE THE NAVBAR
 -------------------------------------------------- */
@@ -32,7 +44,23 @@ body {
 .navbar-wrapper .navbar .container {
   width: auto;
 }
+/* Overwriting navbar properties */
+#mynavbar .navbar .navbar-nav > li > a {
+  color: #9d9d9d;
+}
 
+#mynavbar .navbar .navbar-nav > .active > a,
+.navbar .navbar-nav > .active > a:hover,
+.navbar .navbar-nav > .active > a:focus {
+  color: #fff;
+  background-color: #000;
+}
+
+#mynavbar .navbar .navbar-nav > li > a:hover,
+.navbar .navbar-nav > li > a:focus {
+  color: #fff;
+  background-color: transparent;
+}
 
 /* CUSTOMIZE THE CAROUSEL
 -------------------------------------------------- */
@@ -96,38 +124,4 @@ body {
   font-weight: 300;
   line-height: 1;
   letter-spacing: -1px;
-}
-
-
-/* RESPONSIVE CSS
--------------------------------------------------- */
-
-@media (min-width: 768px) {
-  /* Navbar positioning foo */
-  .navbar-wrapper {
-    margin-top: 20px;
-  }
-  .navbar-wrapper .container {
-    padding-right: 15px;
-    padding-left: 15px;
-  }
-  .navbar-wrapper .navbar {
-    padding-right: 0;
-    padding-left: 0;
-  }
-
-  /* The navbar becomes detached from the top, so we round the corners */
-  .navbar-wrapper .navbar {
-    border-radius: 4px;
-  }
-
-  .featurette-heading {
-    font-size: 50px;
-  }
-}
-
-@media (min-width: 992px) {
-  .featurette-heading {
-    margin-top: 120px;
-  }
 }
