--- a/css/custom.css
+++ b/css/custom.css
@@ -34,6 +34,10 @@ body {
   z-index: 20;
 }
 
+#aboutmenavbar {
+  background-image: url(images/ryan-holloway-273158s.jpg);
+}
+
 /* Flip around the padding for proper display in narrow viewports */
 .navbar-wrapper > .container {
   padding-right: 0;
