Revert "Merge branch 'master' of https://github.com/racheldww/teamproject"
This reverts commit 96ef47f7aad8f200acce8cba2746e8de99773ad6, reversing
changes made to a5ce5f4a36f43d8008652d8dbb4dc9243e9a6f24.

--- a/css/custom.css
+++ b/css/custom.css
@@ -8,6 +8,11 @@ body {
 }
 
 @font-face {
+    font-family: beforetherain;
+    src: url(fonts/BeforeTheRain.woff);
+}
+
+@font-face {
     font-family: modern;
     src: url(fonts/modern.woff);
 }
@@ -39,6 +44,10 @@ body {
   right: 0;
   left: 0;
   z-index: 20;
+}
+
+#aboutmenavbar {
+  background-image: url(images/ryan-holloway-273158s.jpg);
 }
 
 /* Flip around the padding for proper display in narrow viewports */
