--- a/css/custom.css
+++ b/css/custom.css
@@ -9,12 +9,14 @@ body {
 
 @font-face {
     font-family: modern;
-    src: url(fonts/modern.woff);
+    src: url(fonts/modern.woff) format('woff');
+    src: url(fonts/modern.ttf) format('truetype');
 }
 
 @font-face {
     font-family: unrulyness;
-    src: url(fonts/unrulyness.woff);
+    src: url(fonts/unrulyness.woff) format('woff');
+    src: url(fonts/unrulyness.ttf) format('truetype');
 }
 /* This needs fixing, media action not working */
 
