--- a/css/custom.css
+++ b/css/custom.css
@@ -7,20 +7,6 @@ body {
   color: #5a5a5a;
 }
 
-@font-face {
-    font-family: modern;
-    src: url(font/modern.woff2) format('woff2'),
-         url(fonts/modern.woff) format('woff'),
-         url(fonts/modern.ttf) format('truetype');
-}
-
-@font-face {
-    font-family: unrulyness;
-    src: url(fonts/unrulyness.woff) format('woff'),
-         url(fonts/unrulyness.ttf) format('truetype'),
-         url(fonts/unrulyness-2.woff) format('woff'),
-         url(fonts/backup-1.woff) format('woff');
-}
 /* This needs fixing, media action not working */
 
 @media screen and (max-width: 1000px) {
@@ -116,8 +102,8 @@ body {
   right: 0%;
   bottom: 300px;
   left: 0%;
-  font-family: unrulyness;
-  font-size: 100px;
+  font-size: 80px;
+  font-family: 'Amatic SC', cursive;
   text-shadow: none;
   text-align: center;
 }
@@ -129,12 +115,12 @@ body {
   left: 15%;
   padding-top: 20px;
   padding-bottom: 20px;
-  font-family: modern;
-  font-size: 21px;
+  font-size: 18px;
   text-align: center;
   line-height: 1.4;
   text-shadow: none;
   letter-spacing: 0.04em;
+  font-family: 'Playfair Display', serif;
 }
 
 /* Featurettes
